Add html elements plus styling

--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Calculator</title>
 </head>
 <body>
-  
+  <div class="calculator">
+    <div class="underlay"></div>
+    <div class="display">
+      <div class="history">1240 +</div>
+      <div class="current clipped-text">1241</div>
+    </div>
+    <div class="buttons">
+      <div class="section-top">
+        <button id="clear">AC</button>
+        <button id="delete">C</button>
+      </div>
+      <div class="section-mid">
+        <button id="num-7"><span class="clipped-text">7</span></button>
+        <button id="num-8"><span class="clipped-text">8</span></button>
+        <button id="num-9"><span class="clipped-text">9</span></button>
+        <button id="num-4"><span class="clipped-text">4</span></button>
+        <button id="num-5"><span class="clipped-text">5</span></button>
+        <button id="num-6"><span class="clipped-text">6</span></button>
+        <button id="num-1"><span class="clipped-text">1</span></button>
+        <button id="num-2"><span class="clipped-text">2</span></button>
+        <button id="num-3"><span class="clipped-text">3</span></button>
+        <button id="num-0"><span class="clipped-text">0</span></button>
+        <button id="dot"><span class="clipped-text">.</span></button>
+      </div>
+      <div class="section-right">
+        <button id="division">÷</button>
+        <button id="multiplication">×</button>
+        <button id="subtraction">-</button>
+        <button id="addition">+</button>
+        <button id="equal">=</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
