Adjust grid column and row sizing, try new gradients, align ac and 0 buttons properly

--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     </div>
     <div class="buttons">
       <div class="section-top">
-        <button id="clear">AC</button>
+        <button id="clear">
+          <span>AC</span>
+          <span></span>
+        </button>
         <button id="delete">C</button>
+        <button id="division">÷</button>
       </div>
       <div class="section-mid">
         <button id="num-7"><span class="clipped-text">7</span></button>
@@ -29,11 +33,13 @@
         <button id="num-1"><span class="clipped-text">1</span></button>
         <button id="num-2"><span class="clipped-text">2</span></button>
         <button id="num-3"><span class="clipped-text">3</span></button>
-        <button id="num-0"><span class="clipped-text">0</span></button>
+        <button id="num-0">
+          <span class="clipped-text">0</span>
+          <span></span>
+        </button>
         <button id="dot"><span class="clipped-text">.</span></button>
       </div>
       <div class="section-right">
-        <button id="division">÷</button>
         <button id="multiplication">×</button>
         <button id="subtraction">-</button>
         <button id="addition">+</button>
