--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="calculator">
     <div class="underlay"></div>
     <div class="display">
-      <div class="history">1240 +</div>
-      <div class="current clipped-text">1241</div>
+      <div class="history"></div>
+      <div class="current clipped-text"></div>
     </div>
     <div class="buttons">
       <div class="section-top">
@@ -24,16 +24,16 @@
         <button id="division">÷</button>
       </div>
       <div class="section-mid">
-        <button id="num-7"><span class="clipped-text">7</span></button>
-        <button id="num-8"><span class="clipped-text">8</span></button>
-        <button id="num-9"><span class="clipped-text">9</span></button>
-        <button id="num-4"><span class="clipped-text">4</span></button>
-        <button id="num-5"><span class="clipped-text">5</span></button>
-        <button id="num-6"><span class="clipped-text">6</span></button>
-        <button id="num-1"><span class="clipped-text">1</span></button>
-        <button id="num-2"><span class="clipped-text">2</span></button>
-        <button id="num-3"><span class="clipped-text">3</span></button>
-        <button id="num-0">
+        <button id="num-7" class="numeral"><span class="clipped-text">7</span></button>
+        <button id="num-8" class="numeral"><span class="clipped-text">8</span></button>
+        <button id="num-9" class="numeral"><span class="clipped-text">9</span></button>
+        <button id="num-4" class="numeral"><span class="clipped-text">4</span></button>
+        <button id="num-5" class="numeral"><span class="clipped-text">5</span></button>
+        <button id="num-6" class="numeral"><span class="clipped-text">6</span></button>
+        <button id="num-1" class="numeral"><span class="clipped-text">1</span></button>
+        <button id="num-2" class="numeral"><span class="clipped-text">2</span></button>
+        <button id="num-3" class="numeral"><span class="clipped-text">3</span></button>
+        <button id="num-0" class="numeral">
           <span class="clipped-text">0</span>
           <span></span>
         </button>
@@ -47,5 +47,6 @@
       </div>
     </div>
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
