Create calculator functionality

--- a/index.html
+++ b/index.html
@@ -21,29 +21,29 @@
           <span></span>
         </button>
         <button id="delete">C</button>
-        <button id="division">÷</button>
+        <button class="operators" id="division">÷</button>
       </div>
       <div class="section-mid">
-        <button id="num-7" class="numeral"><span class="clipped-text">7</span></button>
-        <button id="num-8" class="numeral"><span class="clipped-text">8</span></button>
-        <button id="num-9" class="numeral"><span class="clipped-text">9</span></button>
-        <button id="num-4" class="numeral"><span class="clipped-text">4</span></button>
-        <button id="num-5" class="numeral"><span class="clipped-text">5</span></button>
-        <button id="num-6" class="numeral"><span class="clipped-text">6</span></button>
-        <button id="num-1" class="numeral"><span class="clipped-text">1</span></button>
-        <button id="num-2" class="numeral"><span class="clipped-text">2</span></button>
-        <button id="num-3" class="numeral"><span class="clipped-text">3</span></button>
-        <button id="num-0" class="numeral">
+        <button id="num-7" class="numerals"><span class="clipped-text">7</span></button>
+        <button id="num-8" class="numerals"><span class="clipped-text">8</span></button>
+        <button id="num-9" class="numerals"><span class="clipped-text">9</span></button>
+        <button id="num-4" class="numerals"><span class="clipped-text">4</span></button>
+        <button id="num-5" class="numerals"><span class="clipped-text">5</span></button>
+        <button id="num-6" class="numerals"><span class="clipped-text">6</span></button>
+        <button id="num-1" class="numerals"><span class="clipped-text">1</span></button>
+        <button id="num-2" class="numerals"><span class="clipped-text">2</span></button>
+        <button id="num-3" class="numerals"><span class="clipped-text">3</span></button>
+        <button id="num-0" class="numerals">
           <span class="clipped-text">0</span>
           <span></span>
         </button>
         <button id="dot"><span class="clipped-text">.</span></button>
       </div>
       <div class="section-right">
-        <button id="multiplication">×</button>
-        <button id="subtraction">-</button>
-        <button id="addition">+</button>
-        <button id="equal">=</button>
+        <button class="operators">×</button>
+        <button class="operators">-</button>
+        <button class="operators">+</button>
+        <button class="operators">=</button>
       </div>
     </div>
   </div>
